force-app/main/default/objects/OperationHistory__c/OperationHistory__c.object-meta.xml
<CustomObject>
    <description>User操作紀錄</description>
    <label>Operation History</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operation Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>