force-app/main/default/objects/OperationHistory__c/fields/Departure__c.field-meta.xml
<CustomField>
    <fullName>Departure__c</fullName>
    <label>起飛地</label>
    <length>255</length>
    <type>Text</type>
</CustomField>