force-app/main/default/objects/OperationHistory__c/fields/DepartureDate__c.field-meta.xml
<CustomField>
    <fullName>DepartureDate__c</fullName>
    <label>起飛日期*</label>
    <type>Date</type>
</CustomField>