force-app/main/default/objects/OperationHistory__c/fields/IATA_Code__c.field-meta.xml
<CustomField>
    <fullName>IATA_Code__c</fullName>
    <label>IATA Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>