force-app/main/default/objects/OperationHistory__c/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <description>超過2年資料每日12點刪除</description>
    <formula>TODAY() &gt; DATE(YEAR(DATEVALUE(CreatedDate)) + 2, MONTH(DATEVALUE(CreatedDate)), DAY(DATEVALUE(CreatedDate)))</formula>
    <label>IsDeleted</label>
    <type>Checkbox</type>
</CustomField>