force-app/main/default/objects/OperationHistory__c/fields/Menu__c.field-meta.xml
<CustomField>
    <fullName>Menu__c</fullName>
    <label>Menu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>編輯旅客旅行文件資料</fullName>
            </value>
            <value>
                <fullName>團體選位/換位</fullName>
            </value>
            <value>
                <fullName>團體報到</fullName>
            </value>
            <value>
                <fullName>登機證列印/寄送</fullName>
            </value>
            <value>
                <fullName>團體報到結果綜整</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>