force-app/main/default/objects/OperationHistory__c/fields/ModifitedDate__c.field-meta.xml
<CustomField>
    <fullName>ModifitedDate__c</fullName>
    <description>建立日期轉日期/時間</description>
    <formula>CreatedDate</formula>
    <inlineHelpText>建立日期轉日期/時間</inlineHelpText>
    <label>ModifitedDate</label>
    <type>DateTime</type>
</CustomField>