force-app/main/default/objects/OperationHistory__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>B2B執行動作</description>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新增</fullName>
            </value>
            <value>
                <fullName>刪除</fullName>
            </value>
            <value>
                <fullName>修改</fullName>
            </value>
            <value>
                <fullName>寄送</fullName>
            </value>
            <value>
                <fullName>輸出</fullName>
            </value>
            <value>
                <fullName>搜尋</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>