force-app/main/default/objects/OperationHistory__c/fields/PNR__c.field-meta.xml
<CustomField>
    <fullName>PNR__c</fullName>
    <label>訂位代號</label>
    <length>255</length>
    <type>Text</type>
</CustomField>