force-app/main/default/objects/OperationHistory__c/fields/Temp_CH_Name__c.field-meta.xml
<CustomField>
    <fullName>Temp_CH_Name__c</fullName>
    <formula>User_Management_Temp__r.CN_Passport__c</formula>
    <label>Temp CH Name</label>
    <type>Text</type>
</CustomField>