force-app/main/default/objects/OperationHistory__c/fields/User_Management_Temp__c.field-meta.xml
<CustomField>
    <fullName>User_Management_Temp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Management Temp</label>
    <referenceTo>UserManagementTemp__c</referenceTo>
    <relationshipLabel>Operation Histories</relationshipLabel>
    <relationshipName>Operation_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>