force-app/main/default/objects/OperationHistory__c/fields/UserManagement__c.field-meta.xml
<CustomField>
    <fullName>UserManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Management</label>
    <referenceTo>UserManagement__c</referenceTo>
    <relationshipLabel>Operation Histories</relationshipLabel>
    <relationshipName>LoginHistoriesUserManagement</relationshipName>
    <type>Lookup</type>
</CustomField>