force-app/main/default/objects/OperationHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FlightNumber__c</columns>
    <columns>Departure__c</columns>
    <columns>DepartureDate__c</columns>
    <columns>PNR__c</columns>
    <columns>UserManagement__c</columns>
    <columns>User_Management_Temp__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>全部</label>
</ListView>